--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.accenture.archidroid.ui.activity.DetailActivity">
+    tools:context="com.accenture.archidroid.ui.activity.MovieDetailActivity">
 
     <TextView
         android:id="@+id/title"
