--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.accenture.archidroid.ui.activity.HomeActivity">
+    tools:context="com.accenture.archidroid.ui.activity.MoviesActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
